Samples/Errors/LetIn3.gs
//This is a G# program with errors.

//Usage of undeclared variable a
b = let 
        a = 5;
    in a + b;